commit alterando link css

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>André Frias - Desenvolvedor</title>
-  <link rel="stylesheet" href="./css/style.css">
+  <link rel="stylesheet" href="./css/style.min.css">
   <meta name="description" content="Desenvolvedor Front-end, localizado em Brasília, DF.">
 </head>
 
@@ -32,7 +32,7 @@
   <section class="experiencia" id="experiencia" aria-label="Experiência">
     <h2 class="subtitulo">Experiência</h2>
     <div>
-      <p class="experiencia-texto">Desenvolve pequenos projetos como o Bikcraft utilizando apenas <strong>HTML</strong>, <strong>CSS</strong> e <strong>JavaScript</strong>.</p>
+      <p class="experiencia-texto">(Experiência Fictícia)Desenvolve pequenos projetos como o Bikcraft utilizando apenas <strong>HTML</strong>, <strong>CSS</strong> e <strong>JavaScript</strong>.</p>
 
       <div class="empresa">
         <span class="empresa-ano">2045</span>
@@ -110,7 +110,7 @@
       <p class="footer-texto">Disponível para novos projetos e estágios junior. Caso interesse, entrar em contato pelos meios disponibilizados.</p>
       <ul class="footer-contato">
         <li>andrevictorfb2010@gmail.com</li>
-        <li>+55 61 981901048</li>
+        <li>+55 61 99999-9999</li>
         <li><a href="/">@andfrias_</a></li>
       </ul>
       <p class="footer-copy">André Frias. Alguns direitos reservados.</p>
