--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>André Frias - Desenvolvedor</title>
   <link rel="stylesheet" href="./css/style.min.css">
   <meta name="description" content="Desenvolvedor Front-end, localizado em Brasília, DF.">
+  <link rel="icon" href="./favicon.svg" type="image/svg+xml">
 </head>
 
 <body>
